--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: djm89uk homepage
+description: Programming challenges.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
