--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: djm89uk
 description: Programming challenges.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
