--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: Programming challenges.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
+markdown: CommonMarkGhPages
